componente products y card funcionando

--- a/Client/src/components/Card/Card.module.css
+++ b/Client/src/components/Card/Card.module.css
@@ -1,5 +1,12 @@
 .container{
-  height: 200px;
-  width: 150px;
-  border: solid 2px yellow;
+  height: 300px;
+  width: 200px;
+  border: solid 2px rgb(16, 16, 15);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+}
+.img{
+  height:100px
 }
