--- a/Client/src/components/Login/Login.module.css
+++ b/Client/src/components/Login/Login.module.css
@@ -22,7 +22,7 @@
     border: 0.5px solid rgb(199, 194, 194);
     margin-bottom: 1rem;
     font-family: 'Kalam', cursive;
-    color: rgb(239, 228, 228);;
+    color: rgb(239, 228, 228);
 
 }
 
