--- a/Client/src/components/Card/Card.module.css
+++ b/Client/src/components/Card/Card.module.css
@@ -1,12 +1,78 @@
 .container{
-  height: 300px;
-  width: 200px;
-  border: solid 2px rgb(16, 16, 15);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+ 
+  border: none;
   border-radius: 10px;
+  width: 200px;
+  overflow: hidden;
+  height: 280px;
+  margin: auto;
+  margin-bottom: 30px;
+  padding: 15px;
+  box-shadow: 2px 3px 3px 3px rgba(0, 0, 0, 0.75);
+  margin: auto;
+  
 }
 .img{
-  height:100px
+  width: 70%;
+  height: 150px;
+}
+.link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+.delete{
+  position: absolute;
+  margin-left: 162px;
+  margin-top: -10px;
+  border: none;
+  color: gray;
+  font-weight: bold;
+  background-color: transparent;
+  cursor: pointer;
+}
+.delete:hover{
+  color: red;
+}
+
+.containerProduct{
+  width: 200px;
+  height: 300px;
+}
+
+.title{
+  font-family: 'Kalam', cursive;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.text{
+  font-family: 'Kalam', cursive;
+  
+}
+
+.containerDescription{
+display: grid;
+ grid-template-columns: 1fr 1fr;
+ margin-left: 10px;
+}
+
+.car{
+  height: 25px;
+  width: 25px;
+  margin-right: 2px;
+}
+
+.containerImg{
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  background-color: #98906c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 50px;
+  margin-top: 5px;
+  cursor: pointer;
 }
