--- a/Client/src/components/Products/Products.module.css
+++ b/Client/src/components/Products/Products.module.css
@@ -1,6 +1,16 @@
+.containerPrimary{
+   height: 80%;
+   
+    
+}
 .container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 70px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    margin: auto;
+    margin-top: 30px;
+    width: 85%;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
 }
