--- a/Client/src/components/Card/Card.module.css
+++ b/Client/src/components/Card/Card.module.css
@@ -10,8 +10,10 @@
   padding: 15px;
   box-shadow: 2px 3px 3px 3px rgba(0, 0, 0, 0.75);
   margin: auto;
-  
+ 
 }
+
+
 .img{
   width: 70%;
   height: 150px;
@@ -56,6 +58,7 @@
 display: grid;
  grid-template-columns: 1fr 1fr;
  margin-left: 10px;
+
 }
 
 .car{
@@ -68,7 +71,7 @@ display: grid;
   border-radius: 50%;
   height: 40px;
   width: 40px;
-  background-color: #98906c;
+  background-color: #cbc090;
   display: flex;
   justify-content: center;
   align-items: center;
