--- a/Client/src/views/Login/Login.module.css
+++ b/Client/src/views/Login/Login.module.css
@@ -5,8 +5,8 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(to right,
-                #98906c 0%,
-                #98906c 45%,
+                #cbc090 0%,
+                #cbc090 45%,
                 white 0%,
                 white 100%);
 }
