--- a/Client/src/components/Login/Login.module.css
+++ b/Client/src/components/Login/Login.module.css
@@ -32,7 +32,7 @@
     height: 2.3rem;
     border-radius: 4px;
     border: none;
-    background-color: #98906c;
+    background-color: #cbc090;
     margin-top: 3rem;
     font-family: 'Kalam', cursive;
     cursor: pointer;
