--- a/Client/src/components/Products/Products.module.css
+++ b/Client/src/components/Products/Products.module.css
@@ -1,16 +1,23 @@
 .containerPrimary{
-   height: 80%;
-   
-    
+   height: 80vh;
+   width: 100%;
+   margin-left: -4rem;
 }
 .container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
-    margin: auto;
     margin-top: 30px;
+    margin: auto;
     width: 85%;
     justify-content: center;
     align-items: center;
     height: 80%;
+}
+
+.containerLoading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 62vw;
 }
