--- a/Client/src/components/Account/Account.module.css
+++ b/Client/src/components/Account/Account.module.css
@@ -43,6 +43,10 @@
 .menu ul li a {
     color: black;
     text-decoration: none;
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
     display: inline-block;
+}
+
+.textLink{
+    font-weight: bold;
 }
