--- a/Client/src/components/Account/Account.module.css
+++ b/Client/src/components/Account/Account.module.css
@@ -10,7 +10,7 @@
     position: absolute;
     top: 80px;
     right: 50px;
-    background-color: #cbc090;
+    background-color: white;
     z-index: 1000;
 }
 
