--- a/Client/src/components/Landing/Landing.module.css
+++ b/Client/src/components/Landing/Landing.module.css
@@ -58,7 +58,7 @@
     font-family: 'Kalam', cursive;
     width: 10rem;
     height: 2.3rem;
-    margin-top: 16px;
+    margin-top: 4px;
     margin-bottom: 4px;
     color: white;
     background-color: black;
@@ -68,4 +68,10 @@
     color: #7aa5ae;
     text-align: center;
     font-size: 0.8rem;
+}
+
+.link{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
 }
