--- a/Client/src/components/Navbar/Navbar.module.css
+++ b/Client/src/components/Navbar/Navbar.module.css
@@ -11,9 +11,10 @@
 .container{
   display: grid;
   grid-template-columns: auto 2fr 1fr auto;
-  background-color: #cbc090;
+  background-color: white;
   height: 80px;
   margin-top: -1rem;
+  width: 100%;
 }
 .selectCategories{
   width: 8rem;
