--- a/Client/src/components/Navbar/Navbar.module.css
+++ b/Client/src/components/Navbar/Navbar.module.css
@@ -71,3 +71,11 @@
     border: none;
     font-family: 'Kalam', cursive;
 }
+
+.scrollContainer {
+  display: block;
+  width: 25px;
+  height: 25px;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
