--- a/Client/src/components/Card/Card.module.css
+++ b/Client/src/components/Card/Card.module.css
@@ -1,22 +1,21 @@
 .container{
- 
-  border: none;
-  border-radius: 10px;
-  width: 200px;
+ border: none;
+  width: 100%;
   overflow: hidden;
-  height: 300px;
+  height: 400px;
   margin: auto;
   margin-bottom: 30px;
   padding: 15px;
-  box-shadow: 2px 3px 3px 3px rgba(0, 0, 0, 0.75);
   margin: auto;
+  border: 1px black solid;
+  border-left: none;
  
 }
 
 
 .img{
-  width: 70%;
-  height: 150px;
+  width: 200px;
+  height: 250px;
 }
 .link{
   display: flex;
@@ -26,7 +25,7 @@
 }
 .delete{
   position: absolute;
-  margin-left: 162px;
+  margin-left: 260px;
   margin-top: -10px;
   border: none;
   color: gray;
@@ -71,7 +70,6 @@ display: grid;
   border-radius: 50%;
   height: 40px;
   width: 40px;
-
   display: flex;
   justify-content: center;
   align-items: center;
