--- a/Client/src/components/DetailCard/DetailCard.module.css
+++ b/Client/src/components/DetailCard/DetailCard.module.css
@@ -1,83 +1,80 @@
-.icon{
-    width: 25px;
-    height: 25px;
-    margin: 16px;
-    cursor: pointer;
+.icon {
+  width: 25px;
+  height: 25px;
+  margin: 16px;
+  cursor: pointer;
 }
-.container{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: auto;
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
 }
-.containerIcon{
-    display: flex;
-    justify-content: flex-end;
-}
-
-.productImg{
-    width: 20rem;
-    
+.containerIcon {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.title{
-    font-family: 'Kalam', cursive;
-}
-.containerTitle{
-    margin-left: 4rem;
-    margin-top: -3rem;
-}
-.containerProduct{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.productImg {
+  width: 20rem;
 }
 
-.containerImg{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.title {
+  font-family: "Dosis", sans-serif;
+}
+.containerTitle {
+  margin-left: 4rem;
+  margin-top: -3rem;
+}
+.containerProduct {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-.containerButtonAdd{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 4rem;
+.containerImg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.containerDetail{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-left: -20rem;
-    margin-top: 4rem;
-}
-.buttonAdd{
-    width: 16rem;
-        height: 2.3rem;
-        border-radius: 4px;
-        border: none;
-        background-color: #cbc090;
-        margin-top: 3rem;
-        font-family: 'Kalam', cursive;
-        cursor: pointer;
+.containerButtonAdd {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4rem;
 }
 
-.containerText{
-    margin-left: -9rem;
-    font-family: 'Kalam', cursive;
-    font-size: 1.2rem;
+.containerDetail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: -20rem;
+  margin-top: 4rem;
+}
+.buttonAdd {
+  width: 16rem;
+  height: 2.3rem;
+  border-radius: 4px;
+  border: none;
+  background-color: #cbc090;
+  margin-top: 3rem;
+  font-family: "Dosis", sans-serif;
+  cursor: pointer;
 }
 
-.rating{
-    display: flex;
-    
-   
+.containerText {
+  margin-left: -9rem;
+  font-family: "Dosis", sans-serif;
+  font-size: 1.2rem;
 }
 
-.textDetail{
-    font-weight: bold;
-    display: flex;
-    margin-right: 5px;
+.rating {
+  display: flex;
+}
+
+.textDetail {
+  font-weight: bold;
+  display: flex;
+  margin-right: 5px;
 }
