--- a/Client/src/components/Filters/Filters.module.css
+++ b/Client/src/components/Filters/Filters.module.css
@@ -1,20 +1,19 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Kalam', cursive;
-    width: 300px;
-    height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Dosis", sans-serif;
+  width: 300px;
+  height: 60vh;
 }
 
-
-.selectFilter{
-    width: 8rem;
-    height: 1.5rem;
-    font-size: 14px;
-    font-weight: bold;
-    border-radius: 8px;
-    font-family: 'Kalam', cursive;
-    background-color: transparent;
+.selectFilter {
+  width: 8rem;
+  height: 1.5rem;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 8px;
+  font-family: "Dosis", sans-serif;
+  background-color: transparent;
 }
