--- a/Client/src/components/FormNewProduct/FormNewProduct.module.css
+++ b/Client/src/components/FormNewProduct/FormNewProduct.module.css
@@ -1,63 +1,64 @@
-.containerForm{
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    font-family: 'Kalam', cursive;
-    font-weight: bold;
+.containerForm {
+  display: flex;
+  height: 45rem;
+  justify-content: center;
+  align-items: center;
+  font-family: "Dosis", sans-serif;
+  font-weight: bold;
 }
 
-.containerInput{
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 2rem;
-    margin-right: 2rem;
+.containerInput {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+  margin-right: 2rem;
 }
 
-.containerRating{
-    display: flex;
+.containerRating {
+  display: flex;
+  justify-content: center;
 }
-.containerFormSecundary{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    align-content: center;
+.containerFormSecundary {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-content: center;
 }
 
-.buttonCreate{
-    width: 16rem;
-    height: 2.3rem;
-    border-radius: 4px;
-    border: none;
-    background-color: #cbc090;
-    margin-top: 1rem;
-    font-family: 'Kalam', cursive;
-    cursor: pointer;
-    font-weight: bold;
+.buttonCreate {
+  width: 16rem;
+  height: 2.3rem;
+  border-radius: 4px;
+  border: none;
+  background-color: #cbc090;
+  margin-top: 1rem;
+  font-family: "Dosis", sans-serif;
+  cursor: pointer;
+  font-weight: bold;
 }
-.inputForm{
-    width: 12rem;
-    height: 2.2rem;
-    font-size: 14pxpx;
-    font-weight: bold;
-    font-family: 'Kalam', cursive;
-    border-radius: 8px;
-    padding: 6px;
-    color: #89815f;
-    border-width: 1px;
+.inputForm {
+  width: 12rem;
+  height: 2.2rem;
+  font-size: 14pxpx;
+  font-weight: bold;
+  font-family: "Dosis", sans-serif;
+  border-radius: 8px;
+  padding: 6px;
+  color: #89815f;
+  border-width: 1px;
 }
-.containerButton{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.containerButton {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.labelRating{
-    margin-top: -0.3rem;
-    margin-bottom: 0.1rem;
-    
+.labelRating {
+  margin-top: -0.3rem;
+  margin-bottom: 0.6rem;
 }
-.inputRadio{
-    display: flex;
-    flex-direction: column;
-    margin-right: 1rem;
+.inputRadio {
+  display: flex;
+  flex-direction: column;
+  margin-right: 1rem;
 }
