css cards, atributos nuevos en el modelo de product

--- a/Client/src/components/FormNewProduct/FormNewProduct.module.css
+++ b/Client/src/components/FormNewProduct/FormNewProduct.module.css
@@ -62,3 +62,14 @@
   flex-direction: column;
   margin-right: 1rem;
 }
+
+.selectColor{
+  width: 100px;
+  height: 100px;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  /* background: #5cb85c; */
+}
+
+
