--- a/Client/src/components/Card/Card.module.css
+++ b/Client/src/components/Card/Card.module.css
@@ -7,7 +7,7 @@
   margin: auto;
   margin-bottom: 30px;
   padding: 15px;
-  box-shadow: 2px 3px 3px 3px rgba(0, 0, 0, 0.75);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   margin: auto;
 }
 
