--- a/Client/src/components/Card/Card.module.css
+++ b/Client/src/components/Card/Card.module.css
@@ -7,14 +7,15 @@
   margin-bottom: 30px;
   padding: 15px;
   margin: auto;
-  border: 1px black solid;
+
   border-left: none;
+  position: relative;
  
 }
 
 
 .img{
-  width: 200px;
+  width: 80%;
   height: 250px;
 }
 .link{
@@ -25,7 +26,7 @@
 }
 .delete{
   position: absolute;
-  margin-left: 260px;
+  margin-left: 85%;
   margin-top: -10px;
   border: none;
   color: gray;
@@ -46,6 +47,7 @@
   font-family: 'Kalam', cursive;
   text-align: center;
   margin-bottom: 8px;
+ height: 2rem;
 }
 
 .text{
@@ -57,6 +59,7 @@
 display: grid;
  grid-template-columns: 1fr 1fr;
  margin-left: 10px;
+ margin-top: 2rem;
 
 }
 
