--- a/Client/src/components/Filters/Filters.module.css
+++ b/Client/src/components/Filters/Filters.module.css
@@ -1,20 +1,24 @@
 .container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Kalam', cursive;
-    width: 300px;
-    height: 60vh;
+    width: 100%;
+    height: 3rem;
+    margin-top: -0.5rem;
 }
 
 
 .selectFilter{
-    width: 8rem;
-    height: 1.5rem;
-    font-size: 14px;
+    width: 100%;
+    height: 2rem;
+    font-size: 1rem;
     font-weight: bold;
-    border-radius: 8px;
     font-family: 'Kalam', cursive;
     background-color: transparent;
+    font-weight: bold;
+    border: 1px solid rgb(214, 210, 210);
+    text-align: center;
+    border-right: none;
+    border-left: none;
 }
