--- a/Client/src/components/Landing/Landing.module.css
+++ b/Client/src/components/Landing/Landing.module.css
@@ -1,8 +1,8 @@
 .container{
     display: grid;
     grid-template-rows: auto 2fr 1fr;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: #fcfcfc;
 }
 .containerLogo{
