mejorando el css de home

--- a/Client/src/components/Pagination/Pagination.module.css
+++ b/Client/src/components/Pagination/Pagination.module.css
@@ -3,12 +3,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 5rem;
 }
 
 .buttonPa {
   border: none;
   border-radius: 5px;
-  box-shadow: 2px 3px 3px 3px rgba(0, 0, 0, 0.75);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
   width: 60px;
   height: 35px;
   background-color: transparent;
