--- a/Client/src/components/Filters/Filters.module.css
+++ b/Client/src/components/Filters/Filters.module.css
@@ -13,7 +13,10 @@
   height: 1.5rem;
   font-size: 14px;
   font-weight: bold;
-  border-radius: 8px;
+  border: none;
+  outline: none;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   font-family: "Dosis", sans-serif;
   background-color: transparent;
+  margin-bottom: 10px;
 }
