--- a/Client/src/components/Carousel/Carousel.module.css
+++ b/Client/src/components/Carousel/Carousel.module.css
@@ -1,7 +1,8 @@
 .swiper {
   width: 100%;
-  height: 40rem;
-  color: transparent;
+  height: 36rem;
+  /* color: transparent; */
+  --swiper-theme-color: rgb(126, 120, 120);
 }
 
 .swiperSlide {
