--- a/Client/src/components/Carousel/Carousel.module.css
+++ b/Client/src/components/Carousel/Carousel.module.css
@@ -1,8 +1,11 @@
 .swiper {
-  width: 100%;
-  height: 36rem;
-  /* color: transparent; */
-  --swiper-theme-color: rgb(255, 255, 255);
+
+    width: 100%;
+    height: 30rem;
+    color: transparent;
+    margin-top: 4rem;
+
+
 }
 
 .swiperSlide {
