--- a/Client/src/components/SwiperCard/SwiperCard.module.css
+++ b/Client/src/components/SwiperCard/SwiperCard.module.css
@@ -15,9 +15,9 @@
 }
 
 .swiperSlide img {
-    display: block;
-    width: 100%;
-    /* height: 10rem; */
+
+     height: 30rem; 
+     width: 25rem;
 }
 .swiper-button-disabled{
     display: none;
