--- a/Client/src/components/DetailCard/DetailCard.module.css
+++ b/Client/src/components/DetailCard/DetailCard.module.css
@@ -9,7 +9,8 @@
   flex-direction: column;
   width: 100%;
   height: auto;
-  margin-top: 4rem
+  margin-bottom: 4rem;
+  margin-top: 4rem;
 }
 .containerIcon {
   display: flex;
@@ -61,10 +62,11 @@
   height: 2.3rem;
   border-radius: 4px;
   border: none;
-  background-color: #cbc090;
+  background-color: black;
   margin-top: 3rem;
   font-family: "Dosis", sans-serif;
   cursor: pointer;
+  color: white;
 }
 
 .containerText {
