--- a/Client/src/components/ShoppingSlider/ShoppingSlider.module.css
+++ b/Client/src/components/ShoppingSlider/ShoppingSlider.module.css
@@ -13,7 +13,7 @@
   -webkit-border-radius: 34px 0px 0px 31px;
     padding: 10px 10px 0 10px;
     position: absolute;
-    top: 65px;
+    top: 80px;
     right: 0px;
     background-color: whitesmoke;
     z-index: 1000;
@@ -100,4 +100,12 @@
 .titleCart{
   text-align: center;
   margin-bottom: 1rem;
+}
+
+.empty{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
