--- a/Client/src/components/ShoppingSlider/ShoppingSlider.module.css
+++ b/Client/src/components/ShoppingSlider/ShoppingSlider.module.css
@@ -56,12 +56,14 @@
     margin-bottom: 1rem;
     font-size: 1rem;
     width: 100%;
+    padding-left: 20px;
   }
   .containerCat{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 8px;
   }
   .name{
     width: 100%;
@@ -74,6 +76,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+
   }
   .price{
     font-size: 1.1rem;
@@ -109,3 +112,4 @@
   justify-content: center;
   align-items: center;
 }
+
