Carrito de compras

--- a/Client/src/components/ShoppingSlider/ShoppingSlider.module.css
+++ b/Client/src/components/ShoppingSlider/ShoppingSlider.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     font-family: "Bebas Neue", cursive;
+   
   }
   
   .cart_list {
@@ -19,7 +20,10 @@
     z-index: 1000;
     overflow-y: auto;
   }
-
+.link{
+  text-decoration: none;
+  color: black;
+}
   .shopping_img{
     width: 25px;
     height: 25px;
@@ -28,9 +32,10 @@
   }  
 
   .product_img{
-    width: 4rem;
-    height: 4rem;
+    width: 2.7rem;
+    height: 2.7rem;
     margin-right: 8px;
+    margin-top: -1.3rem;
   }
 
   .buttonCar{
@@ -63,7 +68,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 8px;
+    margin-left: 20px;
   }
   .name{
     width: 100%;
