--- a/Client/src/components/FormNewProduct/FormNewProduct.module.css
+++ b/Client/src/components/FormNewProduct/FormNewProduct.module.css
@@ -87,11 +87,12 @@
 }
 
 .images {
-  width: 5rem;
-  height: 5rem;
+  /* width: 5rem;
+  height: 5rem; */
   /* object-fit: cover; */
-  border-radius: 10px;
+  /* border-radius: 10px; */
   position: relative;
+  border:none;
 }
 
 /* .images:hover {
