--- a/Client/src/components/Navbar/Navbar.module.css
+++ b/Client/src/components/Navbar/Navbar.module.css
@@ -15,7 +15,8 @@
   height: 80px;
   width: 100%;
   z-index: 10;
-  border-bottom: 1px solid black;
+  /* border-bottom: 1px solid black; */
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   position: fixed;
   margin-top: -4rem;
 
