--- a/Client/src/components/Pagination/Pagination.module.css
+++ b/Client/src/components/Pagination/Pagination.module.css
@@ -3,19 +3,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5rem;
+  margin-top: 5rem;
 }
 
-.buttonPa{
-    border: none;
-    box-shadow: 2px 3px 3px 3px rgba(0, 0, 0, 0.75);
-    width: 60px;
-    height: 35px;
-    background-color: transparent;
-    color: black;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: 'Kalam', cursive;
-    cursor: pointer;
-    margin: 8px;
+.buttonPa {
+  border: none;
+  border-radius: 4px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  width: 60px;
+  height: 35px;
+  background-color: transparent;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: "Dosis", sans-serif;
+  cursor: pointer;
+  margin: 8px;
+}
+
+.pageInfo{
+  display: flex;
+  width: 5rem;
+  font-size: 1.1rem;
+  justify-content: space-evenly;
+  font-family: "Dosis", sans-serif;
 }
