--- a/Client/src/components/Products/Products.module.css
+++ b/Client/src/components/Products/Products.module.css
@@ -1,24 +1,26 @@
-.containerPrimary{
- width: 100%;
- display: flex;
- justify-content: center;
- align-items: center;
+.containerPrimary {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    margin-top: 30px;
-    margin: auto;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    height: 400px;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  margin-top: 30px;
+  margin: auto;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  margin: 0 8rem;
+  flex-wrap: wrap;
 }
 
-.containerLoading{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+.containerLoading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
