--- a/Client/src/components/CategoriesLink/CategoriesLink.module.css
+++ b/Client/src/components/CategoriesLink/CategoriesLink.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 2rem;
+    /* margin-top: 2rem; */
 }
 
 .card{
