--- a/Client/src/components/Filters/Filters.module.css
+++ b/Client/src/components/Filters/Filters.module.css
@@ -1,24 +1,25 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Kalam', cursive;
-    width: 100%;
-    height: 3rem;
-    margin-top: -0.5rem;
+  display: flex;
+  align-items: center;
+  font-family: "Dosis", sans-serif;
+  width: 100%;
+  height: 2rem;
+  margin-bottom: 1rem;
+  background-color: #ceccc9;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
 }
 
-
-.selectFilter{
-    width: 100%;
-    height: 2rem;
-    font-size: 1rem;
-    font-weight: bold;
-    font-family: 'Kalam', cursive;
-    background-color: transparent;
-    font-weight: bold;
-    border: 1px solid rgb(214, 210, 210);
-    text-align: center;
-    border-right: none;
-    border-left: none;
+.selectFilter {
+  width: 80%;
+  height: 2rem;
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: "Dosis", sans-serif;
+  outline: none;
+  background-color: transparent;
+  font-weight: bold;
+  border: none;
+  text-align: center;
+  border-right: none;
+  border-left: none;
 }
