--- a/Client/src/views/About/About.module.css
+++ b/Client/src/views/About/About.module.css
@@ -1,3 +1,63 @@
 .container{
     margin-top: 4rem ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: "Bebas Neue", cursive;
+}
+.title{
+    margin-top: 4rem;
+    margin-bottom: 3rem;
+}
+.containerCollage{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
+.containerPerson{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 2rem;
+    position: relative;
+    z-index: 100;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    margin-bottom: 4rem;
+}
+.imgProfile{
+    width: 15rem;
+    height: 15rem;
+    border-radius: 5px;
+}
+
+.imgLinks{
+    width: 2rem;
+    height: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+.circle{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.circle{
+    content: '';
+    position: absolute;
+    top: -90px;
+    left: -50px;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 0);
+    clip-path: circle(120px);
+    z-index: -10;
 }
