--- a/Client/src/components/FormNewProduct/FormNewProduct.module.css
+++ b/Client/src/components/FormNewProduct/FormNewProduct.module.css
@@ -31,7 +31,8 @@
   height: 2.3rem;
   border-radius: 4px;
   border: none;
-  background-color: #cbc090;
+  background-color: black;
+  color: white;
   margin-top: 1rem;
   font-family: "Dosis", sans-serif;
   cursor: pointer;
