--- a/Client/src/components/Footer/Footer.module.css
+++ b/Client/src/components/Footer/Footer.module.css
@@ -1,12 +1,13 @@
 .footerContainer {
   margin: 0;
-  height: 200px;
+  height: 150px;
   background-color: #bdb19f;
   font-family: "Dosis", sans-serif;
 }
 .containerSection {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
   height: 100%;
 }
@@ -16,14 +17,19 @@
   width: 35px;
   margin: 1rem;
 }
+.redes{
+  margin-left: 40px;
+}
 
 .textContainer {
   align-items: center;
 }
 .textContainer p {
   margin-bottom: 8px;
+
 }
 
 .logo {
-  width: 10rem;
+  width: 5rem;
+  margin-left: 30px;
 }
