--- a/Client/src/components/Footer/Footer.module.css
+++ b/Client/src/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footerContainer {
   margin: 0;
   height: 200px;
-  background-color: #bdb19f;
+  background-color: #909ca1;
   font-family: "Dosis", sans-serif;
 }
 .containerSection {
