--- a/Client/src/components/CategoriesLink/CategoriesLink.module.css
+++ b/Client/src/components/CategoriesLink/CategoriesLink.module.css
@@ -1,134 +1,139 @@
-.mainDiv{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* margin-top: 2rem; */
+.mainDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* margin-top: 2rem; */
 }
 
-.card{
-    position: relative;
-    width: 400px;
-    height: 350px;
-    margin: 20px;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    border-radius: 20px;
-    transition: 0.5s;
+.card {
+  position: relative;
+  width: 400px;
+  height: 350px;
+  margin: 20px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  transition: 0.5s;
 }
 
-.card .circle{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    overflow: hidden;
+.buyBtn {
+  border: none;
+  background-color: azure;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+    rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
-.card .circle::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgb(0, 0, 0);
-    clip-path: circle(120px at center);
+.card .circle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.card .circle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(12, 12, 12);
+  clip-path: circle(120px at center);
+  transition: 1s;
+}
+
+.card:hover .circle:before {
+  background: rgrgb(32, 110, 101);
+  clip-path: circle(400px at center);
+  background: rgb(25, 110, 86);
+}
+
+.card img {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  height: 300px;
+  pointer-events: none;
+  transition: 1s;
+}
+
+.card:hover img {
+  left: 72%;
+  height: 250px;
+}
+
+.card .content {
+  position: relative;
+  width: 50%;
+  padding: 20px 20px 20px 40px;
+  transition: 0, 5s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.card:hover .content {
+  left: 0;
+  opacity: 1;
+  visibility: visible;
+}
+
+.card .content h2 {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 2em;
+  line-height: 1em;
+  margin-bottom: 5px;
+}
+
+.card .content p {
+  color: #fff;
+}
+
+.card .content button {
+  position: relative;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 3px;
+  background: #e4e8e7;
+  color: black;
+  margin-top: 10px;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+@media (max-width: 991px) {
+  .card {
+    width: auto;
+    max-width: 350px;
+    align-items: flex-start;
+    margin: 10px;
+  }
+  .card .img {
     transition: 1s;
-}
-
-.card:hover .circle:before{
-    background: rgb(82, 82, 82);
-    clip-path: circle(400px at center);
-}
-
-.card img{
-    position: absolute;
-    bottom: 50%;
+  }
+  .card:hover {
+    height: 600px;
+  }
+  .card .content {
+    width: 100%;
+    left: 0;
+    padding: 30px;
+  }
+  .card:hover img {
+    top: 30%;
     left: 50%;
-    transform: translate(-50%, 50%);
     height: 300px;
-    pointer-events: none;
-    transition: 1s;
+  }
 }
 
-.card:hover img{
-    left: 72%;
-    height: 250px;
-}
-
-.card .content{
-    position: relative;
-    width: 50%;
-    padding: 20px 20px 20px 40px;
-    transition: 0,5s;
-    opacity: 0;
-    visibility: hidden;
-}
-
-.card:hover .content{
-    left: 0;
-    opacity: 1;
-    visibility: visible;
-}
-
-.card .content h2{
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 2em;
-    line-height: 1em;
-    margin-bottom: 5px;
-}
-
-.card .content p{
-    color: #fff;
-
-}
-
-.card .content button{
-    position: relative;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 10px;
-    background: #fff;
-    color:black;
-    margin-top: 10px;
-    display: inline-block;
-    text-decoration: none;
-    font-weight: 700;
-}
-
-@media (max-width: 991px){
-    .card{
-        width: auto;
-        max-width: 350px;
-        align-items: flex-start;
-        margin: 10px;
-    }
-    .card .img{
-        transition: 1s;
-    }
-    .card:hover{
-        height: 600px;
-    }
-    .card .content{
-        width: 100%;
-        left: 0;
-        padding: 30px;
-    }
-    .card:hover img{
-        top: 30%;
-        left: 50%;
-        height: 300px;
-        
-    }
-
-}
-
-@media (max-width: 420px){
-    .card .content{
-        padding: 20px;
-    }
+@media (max-width: 420px) {
+  .card .content {
+    padding: 20px;
+  }
 }
