--- a/Client/src/components/Filters/Filters.module.css
+++ b/Client/src/components/Filters/Filters.module.css
@@ -5,8 +5,8 @@
   width: 100%;
   height: 2rem;
   margin-bottom: 1rem;
-  background-color: #ceccc9;
   box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+  background-color: #909CA1;
 }
 
 .selectFilter {
