--- a/Client/src/components/PurchaseForm/PurchaseForm.module.css
+++ b/Client/src/components/PurchaseForm/PurchaseForm.module.css
@@ -1,3 +1,58 @@
 .container{
     margin-top: 4rem;
 }
+.containerInput{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-right: 2rem;
+    margin-left: 2rem;
+    margin-bottom: 2rem;}
+.inputForm {
+    width: 12rem;
+    height: 2.2rem;
+    font-size: 14pxpx;
+    font-weight: bold;
+    font-family: "Bebas Neue", cursive;
+    border-radius: 8px;
+    padding: 6px;
+    color: black;
+    border-width: 1px;
+  }
+  .containerInputs{
+    display: flex;
+  }
+  .buttonCar{
+    width: 10rem;
+    height: 2.3rem;
+    border-radius: 4px;
+    border: none;
+    background-color: black;
+    color: white;
+    margin-top: 1rem;
+    font-family: "Bebas Neue", cursive;
+    cursor: pointer;
+    letter-spacing: 1px;
+    margin-bottom: 4rem;
+  }
+  .paymentForm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .containerForm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+ 
+  
+  .containerMinTitle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+  }
