--- a/Client/src/components/MyAccount/Profile.module.css
+++ b/Client/src/components/MyAccount/Profile.module.css
@@ -1,3 +1,42 @@
 .container{
-    margin-top: 4rem;
+    width: 30rem;
+    height: 30rem;
+    display: flex;
+    border-radius: 5%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-size: 300% 300%;
+    background-image: linear-gradient(
+          -45deg, 
+          #004FE3 0%, 
+          #78808F 25%, 
+          #7A8AA8 51%, 
+          #B8C4DB 100%
+    );  
+    animation: AnimateBG 20s ease infinite;
+  }
+
+.userImage{
+    margin-top: 20px;
+    width: 12rem;
+    height: 12rem;
+    border-radius: 20%;
+    border: 3px solid white;
 }
+
+.userData{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Dosis", sans-serif;
+    margin: 10px;
+    color: white;
+    font-size: 1.5rem;
+}
+
+@keyframes AnimateBG { 
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+  }
