--- a/Client/src/components/MyAccount/Addresses.module.css
+++ b/Client/src/components/MyAccount/Addresses.module.css
@@ -1,4 +1,110 @@
 .container{
     margin-top: 4rem;
-    padding-top: 2rem;
+    height: 100vh;
+    width: 100%;
+    font-family: "Bebas Neue", cursive;
+}
+.iconBack {
+    width: 25px;
+    height: 25px;
+    margin: 16px;
+    cursor: pointer;
+    margin-left: -4rem;
+  }
+  .back{
+    display: flex;
+    width: 90%;
+    justify-content: start;
+    margin-top: 1.5rem;
+    margin-left: 4rem;
+}
+
+.containerTitle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.containerDirection{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 7rem;
+}
+.cardDirection{
+    width: 33.3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+}
+.buttonDelete{
+    position: absolute;
+    top: -20px;
+    left: 140px;
+    border-radius: 4px;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
+
+.buttonDelete:hover{
+    color: red;
+}
+.containerTitle{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: rems;
+}
+
+.containerIcon{
+    background-color: black;
+    height: 4rem;
+    width: 4rem;
+    margin-right: 2rem;
+    padding-left: 8px;
+    padding-top: 8px;
+    border-radius: 5px;
+    
+}
+.icon{
+    width: 3rem;
+    height: 3rem;
+    
+}
+
+.iconAdd{
+    width: 1rem;
+    height: 1rem;
+    margin-right: 1rem;
+}
+.containerAdd{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    width: 5rem;
+    height: 2.3rem;
+    border-radius: 4px;
+    border: none;
+    background-color: black;
+    color: white;
+    margin-top: 8rem;
+    font-family: "Bebas Neue", cursive;
+    cursor: pointer;
+    letter-spacing: 1px;
+    margin-bottom: 4rem;
+    margin-right: 4rem;
+   
+}
+.containerPrincipal{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
