--- a/Client/src/components/MyAccount/Profile.module.css
+++ b/Client/src/components/MyAccount/Profile.module.css
@@ -1,3 +1,43 @@
 .container{
     margin-top: 4rem;
+    height: 100vh;
+    width: 100%;
+    font-family: "Bebas Neue", cursive;
+
 }
+.iconBack {
+    width: 25px;
+    height: 25px;
+    margin: 16px;
+    cursor: pointer;
+    margin-left: -4rem;
+  }
+  .back{
+    display: flex;
+    width: 90%;
+    justify-content: start;
+    margin-top: 1.5rem;
+    margin-left: 4rem;
+}
+.dates{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 4rem;
+}
+.imgProfile{
+    width: 15rem;
+    height: 15rem;
+    margin-right:10rem;
+}
+.containerTitle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.containerText{
+    margin-left: 10rem;
+}
+.textDate{
+    margin-bottom: 1rem;
+  }
