--- a/Client/src/components/ReviewForm/reviewForm.module.css
+++ b/Client/src/components/ReviewForm/reviewForm.module.css
@@ -1,6 +1,53 @@
 .container{
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     margin: 100px;
     padding: 100px;
 }
+
+.containerInput {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    width: 300px;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.containerDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+  .containerButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+    rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 3px;
+    background: #e4e8e7;
+    color: black;
+    margin-top: 10px;
+    text-decoration: none;
+    font-weight: 700; 
+}
+    
