--- a/Client/src/components/Searchbar/Searchbar.module.css
+++ b/Client/src/components/Searchbar/Searchbar.module.css
@@ -2,6 +2,8 @@
   display: flex;
   position: relative;
   margin-top: 2rem;
+  width: 17rem;
+  border-radius: 30px;
 }
 .search {
   display: flex;
